fix backdrop filter on safari

--- a/wp-movies-theme/style.css
+++ b/wp-movies-theme/style.css
@@ -57,6 +57,7 @@ footer a {
 header > div.wp-block-group {
 	border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 	backdrop-filter: blur(25px);
+	-webkit-backdrop-filter: blur(25px);
 	position: fixed;
 	z-index: 999;
 	margin: 0 auto;
